# shop

./: .gitignore  README.md  db.sqlite3  pyproject.toml
account/: forms.py  urls.py  views.py
account/templates/account/: account.html  edit_account.html  order_history.html  signup.html
cart/: cart.py  urls.py  views.py
cart/templates/cart/: cart.html  cart_menu.html  checkout.html  success.html
cart/templates/cart/partials/: cart_item.html  cart_total.html
core/: forms.py  urls.py  views.py
core/templates/core/: base.html  index.html  login.html  shop.html  signup.html
core/templates/core/partials/: track_order.html
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: add_product.html  base.html  dashboard.html  edit_order.html  edit_product.html  order.html  product.html
dashboard/templates/dashboard/partials/: pagination.html
order/: admin.py  models.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_rename_postal_code_order_zipcode.py  0003_alter_order_options.py  0004_alter_orderitem_quantity.py  0005_alter_order_status.py  0006_alter_order_status.py
product/: admin.py  models.py  views.py
product/migrations/: 0001_initial.py  0002_products.py  0003_alter_category_options_alter_products_options_and_more.py  0004_products_image_products_thumbnail.py  0005_alter_products_image_alter_products_thumbnail.py  0006_alter_products_price.py  0007_products_edition_products_rarity.py  0008_alter_products_rarity.py  0009_alter_products_rarity.py
product/templates/product/: product.html
shop/: settings.py  urls.py
(+1 files in other folders)
