[tool.poetry]
name = "danytgc"
version = "0.1.0"
description = "A e-commerce website made with django"
authors = ["Dany CM <danycmwow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
django-tailwindcss = "^0.4.0"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
